float per creare 3 colonne nel nav

--- a/index.html
+++ b/index.html
@@ -9,9 +9,32 @@
     </head>
     <body>
         <!-- header con nav -->
-        <header>
+        <header class="section">
             <div class="sec-header">
-                <div class="sec-centered"></div>
+                <div class="sec-centered">
+                    <!-- nav con 3 colonne -->
+                    <nav class="clearfix">
+                        <!-- col.n1 logo -->
+                        <div class="logo float-left">
+                            <img src="img/logo.svg" alt="logo fluentify">
+                        </div>
+
+                        <!-- col.n2 unordered list -->
+                        <ul class="elenco-nav float-left">
+                            <li><a href="#">IL METODO</a></li>
+                            <li><a href="#">LA TECNOLOGIA</a></li>
+                            <li><a href="#">REAL-LIFE ENGLISH</a></li>
+                            <li><a href="#">SOLUZIONI AZIENDALI</a></li>
+                        </ul>
+
+                        <!-- col.n3 unordered list -->
+                        <ul class=" elenco-login float-left">
+                            <li><a href="#">DIVENTA UN TUTOR</a></li>
+                            <li><button>LOGIN</button></li>
+                            <li><button>STRUTTURA UN PIANO</button></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </header>
         
