--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <!-- header con nav -->
-        <header class="section">
+        <header class="section-bg-blue">
             <div class="sec-header">
                 <div class="sec-centered">
                     <!-- nav con 3 colonne -->
@@ -43,8 +43,15 @@
         <main>
 
             <!-- row-n.1 article section-hero -->
-            <article class="sec-hero">
-                <div class="sec-centered"></div>
+            <article class="section-bg-blue sec-hero">
+                <div class="sec-centered">
+                    <div class="title-container-row">
+                        <div class="title-aligned">
+                            <h2>SCEGLI L'INGLESE STUDIATO PER I PROFESSIONISTI</h2>
+                            <button>STRUTTURA UN PIANO</button>
+                        </div>
+                    </div>
+                </div>
             </article>
 
             <!-- row-n.2 article section-banner -->
