row con 3 colonne

--- a/index.html
+++ b/index.html
@@ -55,18 +55,23 @@
             </article>
 
             <!-- row-n.2 article section-banner -->
-            <article class="banner-sec-grey">
-                <div class="sec-centered"></div>
+            <article class="banner-sec-grey h-100">
+                <div class="sec-centered">
+                    <div class="message">
+                        <h4>Le scuole di lingua tradizionali non sono efficaci</h4>
+                        <p>Solo un corso incentrato sulla Fluency può portare ad una soluzione definitiva concreta</p>
+                    </div>
+                </div>
             </article>
 
             <!--row-n.3  -->
             <article>
                 <div class="sec-centered">
                     <!-- row con 3 colonne -->
-                    <div class="row">
-                        <div class="column"></div>
-                        <div class="column"></div>
-                        <div class="column"></div>
+                    <div class="row clearfix">
+                        <div class="column-3 float-left"></div>
+                        <div class="column-3 col-center float-left"></div>
+                        <div class="column-3 float-left"></div>
                     </div>
                 </div>
             </article>
