--- a/index.html
+++ b/index.html
@@ -80,21 +80,21 @@
             <article>
                 <div class="sec-centered">
                     <!-- row con 2 colonne -->
-                    <div class="row">
-                        <div class="column"></div>
-                        <div class="column"></div>
+                    <div class="row clearfix">
+                        <div class="column-2 float-left"></div>
+                        <div class="column-2 float-left"></div>
                     </div>
                 </div>
             </article>
         </main>
 
         <!-- footer -->
-        <footer>
+        <footer class="banner-sec-grey">
             <div class="sec-centered">
                 <!-- row con due colonne -->
-                <div class="row">
-                    <div class="column"></div>
-                    <div class="column"></div>
+                <div class="row clearfix">
+                    <div class="column-2 float-left"></div>
+                    <div class="column-2 float-left"></div>
                 </div>
             </div>
         </footer>
