--- a/index.html
+++ b/index.html
@@ -67,11 +67,39 @@
             <!--row-n.3  -->
             <article>
                 <div class="sec-centered">
-                    <!-- row con 3 colonne -->
+                    <!-- clearfix con 3 colonne flottate  -->
                     <div class="row clearfix">
-                        <div class="column-3 float-left"></div>
-                        <div class="column-3 col-center float-left"></div>
-                        <div class="column-3 float-left"></div>
+
+                        <!-- colonna n1 -->
+                        <div class="column-3 float-left">
+                            <div class="img-content">
+                                <img src="img/profile.svg" alt="Piano formativo configurato sul proprio livello">
+                            </div>
+                            <div class="informative-text">
+                                <h5>Piano formativo configurato sul proprio livello</h5>
+                                <p>Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
+                            </div>
+                        </div>
+                        <!-- colonna n2  -->
+                        <div class="column-3 col-center float-left">
+                            <div class="img-content">
+                                <img src="img/computer.svg" alt="Affiancamento del tutor">
+                            </div>
+                            <div class="informative-text">
+                                <h5>Affiancamento costante del tutor</h5>
+                                <p>Scopri il syllabus, la guida per il tuo percorso. Scegli gli argomenti per passare al livello successivo e affrontali con i tutor nelle sessioni one-to-one.</p>
+                            </div>
+                        </div>
+                        <!-- colonna n3 -->
+                        <div class="column-3 float-left">
+                            <div class="img-content">
+                                <img src="img/doc.svg" alt="Monitora i tuoi progressi">
+                            </div>
+                            <div class="informative-text">
+                                <h5>Monitora i tuoi progressi costantemente</h5>
+                                <p>Controlla i tuoi progressi con i dati elaborati dal nostro sistema. Hai il pieno controllo su miglioramenti e obiettivi raggiunti.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </article>
