row con 2 colonne: img + testo

--- a/index.html
+++ b/index.html
@@ -109,8 +109,20 @@
                 <div class="sec-centered">
                     <!-- row con 2 colonne -->
                     <div class="row clearfix">
-                        <div class="column-2 float-left"></div>
-                        <div class="column-2 float-left"></div>
+                        <div class="column-2 float-left">
+                            <div class="img-mountain">
+                                <img src="img/mountain.svg" alt="Esperienza Fluentify parte da un test di placement">
+                            </div>
+                        </div>
+                        <div class="column-2 float-left">
+                            <div class="description-placement">
+                                <h3>Scopri il tuo livello iniziale e struttura un piano personalizzato</h3>
+                                <p>L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo inglese, ad oggi.</p>
+                                <div class="ctas">
+                                    <a href="#">Scopri il nostro test di placement</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </article>
