--- a/index.html
+++ b/index.html
@@ -133,8 +133,24 @@
             <div class="sec-centered">
                 <!-- row con due colonne -->
                 <div class="row clearfix">
-                    <div class="column-2 float-left"></div>
-                    <div class="column-2 float-left"></div>
+                    <div class="column-2 float-left">
+                        <div class="piano-personalizzato">
+                            <h4>Struttura un piano</h4>
+                        </div>
+                    </div>
+                    <div class="column-2 float-left">
+                        <div class="form-group">
+                            <span>Sono</span>
+                            <select name="identità" id="">
+                                <option value="" disabled selected>Seleziona</option>
+                                <option value="opt-1">Sig.re</option>
+                                <option value="opt-2">Sig.ra</option>
+                            </select>
+                            <span>
+                                <a href="#">Visualizza il tuo piano</a>
+                            </span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </footer>
