tasto-help: position fixed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,14 @@
                 </div>
             </div>
         </header>
-        
+        <!-- help position fixed -->
+        <section>
+            <div class="sec-centered">
+                <div class="help-fixed">
+                    <a class="help-click" href="#">HELP</a>
+                </div>
+            </div>
+        </section>
 
         <!-- main con 4 row -->
         <main>
