help-chat position fixed

--- a/index.html
+++ b/index.html
@@ -38,13 +38,10 @@
             </div>
         </header>
         <!-- help position fixed -->
-        <section>
-            <div class="sec-centered">
-                <div class="help-fixed">
-                    <a class="help-click" href="#">HELP</a>
-                </div>
-            </div>
-        </section>
+        <div class="chat-help">               
+            <a href="#">HELP</a> 
+        </div>
+
 
         <!-- main con 4 row -->
         <main>
