--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                         <!-- col.n3 unordered list -->
                         <ul class=" elenco-login float-left">
                             <li><a href="#">DIVENTA UN TUTOR</a></li>
-                            <li><button>LOGIN</button></li>
-                            <li><button>STRUTTURA UN PIANO</button></li>
+                            <li><a id="butt-a">LOGIN</a></li>
+                            <li><a class="butt-b">STRUTTURA UN PIANO</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -39,7 +39,7 @@
         </header>
         <!-- help position fixed -->
         <div class="chat-help">               
-            <a href="#">HELP</a> 
+            <a class="butt-b" href="#">HELP</a> 
         </div>
 
 
@@ -51,8 +51,8 @@
                 <div class="sec-centered">
                     <div class="title-container-row">
                         <div class="title-aligned">
-                            <h2>SCEGLI L'INGLESE STUDIATO PER I PROFESSIONISTI</h2>
-                            <button>STRUTTURA UN PIANO</button>
+                            <h2>Scegli l'inglese studiato per i professionisti</h2>
+                            <a class="butt-c" href="#">STRUTTURA UN PIANO</a>
                         </div>
                     </div>
                 </div>
@@ -62,8 +62,8 @@
             <article class="banner-sec-grey h-100">
                 <div class="sec-centered">
                     <div class="message">
-                        <h4>Le scuole di lingua tradizionali non sono efficaci</h4>
-                        <p>Solo un corso incentrato sulla Fluency può portare ad una soluzione definitiva concreta</p>
+                        <h2>Le scuole di lingua tradizionali non sono efficaci</h2>
+                        <p>Solo un corso incentrato sulla Fluency può portare ad una soluzione definitiva concreta.</p>
                     </div>
                 </div>
             </article>
