--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
                                 <img src="img/profile.svg" alt="Piano formativo configurato sul proprio livello">
                             </div>
                             <div class="informative-text">
-                                <h5>Piano formativo configurato sul proprio livello</h5>
+                                <h2 class="color-text-green">Piano formativo configurato sul proprio livello</h2>
+                                <div class="hr-special">
+                                    <hr>
+                                </div>
                                 <p>Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
                             </div>
                         </div>
@@ -90,7 +93,10 @@
                                 <img src="img/computer.svg" alt="Affiancamento del tutor">
                             </div>
                             <div class="informative-text">
-                                <h5>Affiancamento costante del tutor</h5>
+                                <h2 class="color-text-green">Affiancamento costante del tutor</h2>
+                                <div class="hr-special">
+                                    <hr>
+                                </div>
                                 <p>Scopri il syllabus, la guida per il tuo percorso. Scegli gli argomenti per passare al livello successivo e affrontali con i tutor nelle sessioni one-to-one.</p>
                             </div>
                         </div>
@@ -100,7 +106,10 @@
                                 <img src="img/doc.svg" alt="Monitora i tuoi progressi">
                             </div>
                             <div class="informative-text">
-                                <h5>Monitora i tuoi progressi costantemente</h5>
+                                <h2 class="color-text-green">Monitora i tuoi progressi costantemente</h2>
+                                <div class="hr-special">
+                                    <hr>
+                                </div>
                                 <p>Controlla i tuoi progressi con i dati elaborati dal nostro sistema. Hai il pieno controllo su miglioramenti e obiettivi raggiunti.</p>
                             </div>
                         </div>
