modifiche di rown.4 a 2 colonne

--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
                 </div>
             </article>
 
+            <div>
+                <hr id="full-hr">
+            </div>
+
             <!-- row n.4 -->
             <article>
                 <div class="sec-centered">
@@ -129,7 +133,7 @@
                         </div>
                         <div class="column-2 float-left">
                             <div class="description-placement">
-                                <h3>Scopri il tuo livello iniziale e struttura un piano personalizzato</h3>
+                                <h2>Scopri il tuo livello iniziale e struttura un piano personalizzato</h2>
                                 <p>L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo inglese, ad oggi.</p>
                                 <div class="ctas">
                                     <a href="#">Scopri il nostro test di placement</a>
