modifico colori al footer

--- a/index.html
+++ b/index.html
@@ -152,19 +152,19 @@
                 <div class="row clearfix">
                     <div class="column-2 float-left">
                         <div class="piano-personalizzato">
-                            <h4>Struttura un piano</h4>
+                            <h2>Struttura un piano</h2>
                         </div>
                     </div>
                     <div class="column-2 float-left">
                         <div class="form-group">
                             <span>Sono</span>
-                            <select name="identità" id="">
+                            <select name="identità" id="option-color">
                                 <option value="" disabled selected>Seleziona</option>
                                 <option value="opt-1">Sig.re</option>
                                 <option value="opt-2">Sig.ra</option>
                             </select>
                             <span>
-                                <a href="#">Visualizza il tuo piano</a>
+                                <a class="butt-b" href="#">VISUALIZZA IL TUO PIANO</a>
                             </span>
                         </div>
                     </div>
