sostituisco article con section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <main>
 
             <!-- row-n.1 article section-hero -->
-            <article class="section-bg-blue sec-hero">
+            <section class="section-bg-blue sec-hero">
                 <div class="sec-centered">
                     <div class="title-container-row">
                         <div class="title-aligned">
@@ -56,20 +56,20 @@
                         </div>
                     </div>
                 </div>
-            </article>
+            </section>
 
             <!-- row-n.2 article section-banner -->
-            <article class="banner-sec-grey h-100">
+            <section class="banner-sec-grey h-100">
                 <div class="sec-centered">
                     <div class="message">
                         <h2>Le scuole di lingua tradizionali non sono efficaci</h2>
                         <p>Solo un corso incentrato sulla Fluency può portare ad una soluzione definitiva concreta.</p>
                     </div>
                 </div>
-            </article>
+            </section>
 
             <!--row-n.3  -->
-            <article>
+            <section>
                 <div class="sec-centered">
                     <!-- clearfix con 3 colonne flottate  -->
                     <div class="row clearfix">
@@ -115,14 +115,14 @@
                         </div>
                     </div>
                 </div>
-            </article>
+            </section>
 
             <div>
                 <hr id="full-hr">
             </div>
 
             <!-- row n.4 -->
-            <article>
+            <section>
                 <div class="sec-centered">
                     <!-- row con 2 colonne -->
                     <div class="row clearfix">
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                 </div>
-            </article>
+            </section>
         </main>
 
         <!-- footer -->
